--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,17 @@
     <string name="app_name">Fire Response Mapper</string>
     <string name="title_activity_maps">Map</string>
 
-    <string name="GOOGLE_MAPS_API_KEY">YOUR_KEY_HERE</string>
+    <!--Navigation drawer-->
+    <string name="title_activity_list">ListActivity</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+
+    <!--Settings -->
+    <string name="action_about">About this app</string>
+    <string name="action_list">Show as list</string>
+    <string name="action_map">Show on map</string>
 
 </resources>
